--- a/homework.html
+++ b/homework.html
@@ -7,7 +7,10 @@
 	<script type="text/javascript" src="homework.js"></script>
 	<title></title>
 </head>
-<body>
+<body><div class="image-frame">
+   <img class="Gabe2" src="Gabe2.jpg" />
+   <img class="Gabe1" src="Gabe1.jpg" />
+   </div>
 
 </body>
 </html>
